# SHRED-X

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  api.html  citations.html  contributing.html  genindex.html  getting_started.html  index.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  pyrefly.toml  pytest.toml  ruff.toml  search.html  searchindex.js  tutorials.html  user_guide.html
.github/workflows/: docs.yml  doctest.yml  lint_format.yml  pytest.yml
_sources/: api.rst.txt  contributing.rst.txt  index.rst.txt
docs/source/: api.rst  citations.rst  conf.py  getting_started.rst  index.rst  tutorials.rst  user_guide.rst
docs/source/_templates/autosummary/: attribute.rst  base.rst  class.rst  member.rst  method.rst
docs/source/notebooks/: shred.ipynb
notebooks/: shred.html  shred.ipynb
shredx/: __init__.py
shredx/datasets/: __init__.py  dataloaders.py  datasets.py
shredx/models/: __init__.py  mixed_model.py
shredx/modules/: __init__.py  cnn.py  mlp.py  moe_mixin.py  positional_encoding.py  rnn.py  sindy_layer.py  sindy_loss_mixin.py  transformer.py
shredx/utils/: __init__.py  plots.py  pytorch_polynomial_features.py  scaling.py  sensors.py
test/datasets/: test_dataloaders.py
test/modules/: test_cnn.py  test_mixed_model.py  test_mlp.py  test_moe_mixin.py  test_rnn.py  test_sindy_layer.py  test_transformer.py
test/utils/: test_dataset.py  test_plots.py  test_pytorch_polynomial_features.py  test_scaling.py  test_sensors.py
